# prototype_voxel_template

./: .gitignore  Cargo.toml  README.md
assets/config/: default.prototype.ron
src/: assets.rs  chunk_colliders.rs  main.rs  player.rs  terrain.rs  terrain_meshing.rs  terrain_noise.rs
