[package]
name = "prototype_voxel_template"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev_native = ["bevy/dynamic_linking"]

[dependencies]
avian3d = { version = "=0.6.0-rc.1", default-features = false, features = ["3d", "f32", "parry-f32"] }
bevy = { version = "0.18.1", features = ["file_watcher"] }
bevy_ahoy = "0.1.0-rc.6"
bevy_asset_loader = "0.26.0"
bevy_common_assets = { version = "0.16.0", features = ["ron"] }
bevy_enhanced_input = "0.24.4"
bevy-inspector-egui = "0.36.0"
bevy_voxel_world = "0.15.1"
noiz = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
